syntax="proto3";

package subscription_service;
option go_package ="genproto/subscription_service";


message Id {
    string id = 1;
}

message GetListFilter {
    int32 page = 1;
    int32 limit = 2;
    repeated SortBy sorts = 3;
    repeated Filters filters = 4;
}

message Filters {
    string field = 1;
    string type = 2;
    string value = 3;
}

message SortBy {
    string field = 1;
    string type = 2;
}

message Empty {

}